infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: atark.com
      # - host: 73f0b131-eu-de.lb.appdomain.cloud
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
#           - path: /api/tickets/?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: tickets-srv
#                 port:
#                   number: 3000
#           - path: /api/orders/?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: orders-srv
#                 port:
#                   number: 3000
#           - path: /api/payments/?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: payments-srv
#                 port:
#                   number: 3000
#           - path: /?(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: client-srv
#                 port:
#                   number: 3000
# #zalupa
